--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alertas</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
     <link rel="stylesheet" href="/src/css/alertas.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script type="module" src="/src/js/alertas.js"></script>
     <script src="/src/js/config.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.AwesomeMarkers/2.0.2/leaflet-awesome-markers.css"/>
 </head>
 <body>
     <header>
@@ -36,9 +42,7 @@
     <main>
         <span id="span-principal">Mapa de Alertas</span>
         <section id="mapa">
-            <div id="map">
-                
-            </div>
+            <div id="map"></div>
         </section>
         <section id="cards">
             <span class="pedaco">Enchente</span>
