--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -15,7 +15,7 @@
             </a>
             <section id="barra-de-pesquisa">
                 <img src="/assets/lupa.png" alt="lupa De Pesquisa">
-                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+                <input id="barra-de-pesquisa" type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
