--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>
+        <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
                 <img src="/assets/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/lupa.png" alt="lupaDePesquisa">
-                <input type="text" placeholder="Pesquisar" alt="lupaDePesquisa">
+                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
         <div class="navbar-container">
@@ -31,16 +31,12 @@
         </div>
     </header>
     <article>
-        <hr color=grey> 
-        <center>
-            <h1>Clima no Rio Grande do Sul</h1>
-        </center>
+        <h1>Clima no Rio Grande do Sul</h1>
         <p>Com os últimos eventos climáticos registrados no Rio Grande do Sul é comum que a pergunta de “Não poderia ter sido evitado?” fique pairando no ar. Para que possamos respondê-la é importante entendermos um pouco mais sobre o clima existente no estado.</p>
         <p>No Rio Grande do Sul existem massas ar atuantes, a massa de ar Tropical Atlântica, de característica quente e úmida acarreta chuvas principalmente no verão, quando possui mais força, além de bastante calor. A massa de ar Tropical Continental, que aumenta as temperaturas, tem característica seca. A massa de ar Polar Atlântica, que se forma no oceano e é, portanto, úmida, atinge com força o estado durante o inverno, o inverno é inclusive, a época com maiores índices pluviométricos registrados. Por fim, a massa de ar Polar Continental, se forma no interior do continente americano e é portanto seca e fria, propiciando condições ideais para a formação das intensas geadas que cobrem os campos gaúchos durante o inverno.</p>
         <p>Outra característica importante do clima do estado são os ventos regionais, o Minuano mais famoso deles, a história conta que tem a origem de seu nome na tribo indígena Minuanos, que emitiam um som que lembrava o vento quando assobiava nas frestas das casas e nas árvores. Esse vento tem origem no Deserto da Patagônia argentina, ele é frio e tem origem polar, atinge o Rio Grande do Sul e a região sul de Santa Catarina e de modo geral ocorre após a passagem de frentes frias.</p>
         <p>Além do clima da região, fenômenos climátiicos como o aquecimento das águas do Oceano Pacífico como o El Niño foram um dos principais contribuintes para o grande volume de chuvas, essas chuvas foram responsáveis pelo o aumento das águas dos rios gerando as enchentes.</p>     
     </article>
-    <section>
         <main>
             <section id="lastNews"> 
                 <h3>Últimas Notícias Rio Grande do Sul</h3>
@@ -121,49 +117,38 @@
                 </section>
             </aside>
         </main>
-    </section>
-    <!--footer>
+    <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Redes Sociais</h3>
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-            </a>
-            <a href="/html/sobre.html">
-                <h3>Sobre Nós</h3>
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato">
-            </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="/assets/qrCode.png" alt="QR Code">
+            <section id="footerfeio">
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <h3>Redes Sociais</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="./sobre.html">
+                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <h3>Sobre Nós</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/contato.png" alt="Contato">
+                        <h3>Contato</h3>
+                    </a>
+                </div>
+            </section>
+            <div class="middle-section">
+                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <p>Copyright ©2024 Portal Do Clima RS</p>
+            </div>
+            <div class="qrcode-section">
+                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+            </div>
         </div>
-    </footer-->
-
-    <footer class="footer">
-        <div class="footer-section social">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-                <h3>Redes Sociais</h3>
-            </a>
-            <a href="/html/sobre.html" class="footer-item">
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-                <h3>Sobre Nós</h3>
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <img src="/assets/contato.png" alt="Contato">
-                <h3>Contato</h3>
-            </a>
-        </div>
-        <div class="linha"></div>
-        <div class="footer-section flag">
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" class="footer-item">
-            <p>Copyright ©2024<br>Portal Do Clima RS</p>
-        </div>
-        <div class="footer-section qr">
-            <img src="/assets/qrCode.png" alt="QR Code" class="footer-item">
-        </div>
+        <div class="diagonal-line left"></div>
+        <div class="diagonal-line right"></div>
     </footer>
 </body>
 </html>
