--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -30,7 +30,6 @@
             </nav>
         </div>
     </header>
-
     <main>
         <section class="prevencao-tipos">
             <h1>Dicas de Prevenção</h1>
@@ -72,47 +71,38 @@
             </a>
         </section>
     </main>
-    <footer class="footer">
-        <div class="footer-section social">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-                <h3>Redes Sociais</h3>
-            </a>
-            <a href="/html/sobre.html" class="footer-item">
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-                <h3>Sobre Nós</h3>
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <img src="/assets/contato.png" alt="Contato">
-                <h3>Contato</h3>
-            </a>
-        </div>
-        <div class="linha"></div>
-        <div class="footer-section flag">
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" class="footer-item">
-            <p>Copyright ©2024<br>Portal Do Clima RS</p>
-        </div>
-        <div class="footer-section qr">
-            <img src="/assets/qrCode.png" alt="QR Code" class="footer-item">
-        </div>
-    </footer>
-    <!--<footer>
+    <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <h3>Redes Sociais</h3>
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-            </a>
-            <a href="/html/sobre.html" class="footer-item">
-                <h3>Sobre Nós</h3>
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
-                <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato" class="footer-item">
-            </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" class="footer-item">
-            <img src="/assets/qrCode.png" alt="QR Code" class="footer-item">
+            <section id="footerfeio">
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <h3>Redes Sociais</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="./sobre.html">
+                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <h3>Sobre Nós</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/contato.png" alt="Contato">
+                        <h3>Contato</h3>
+                    </a>
+                </div>
+            </section>
+            <div class="middle-section">
+                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <p>Copyright ©2024 Portal Do Clima RS</p>
+            </div>
+            <div class="qrcode-section">
+                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+            </div>
         </div>
-    </footer>-->
+        <div class="diagonal-line left"></div>
+        <div class="diagonal-line right"></div>
+    </footer>
 </body>
 </html>
